# 1bedrock

./: .gitignore  README.md  pyproject.toml  run_example.py  run_ui.sh
config/: defaults.yaml
docs/: ARCHITECTURE_OPTIONS.md  CONVERSATION_LOG_2026-02-06.md  EXPANSION_STRATEGY.md
examples/: compare_scenarios_monte_carlo.py  run_monte_carlo.py  tif_grid_search.py
src/: __init__.py  scenarios.py
src/calculations/: __init__.py  costs.py  dcf.py  debt.py  debt_stack.py  detailed_cashflow.py  draw_schedule.py  formula_registry.py  land.py  metrics.py  monte_carlo.py  property_tax.py  revenue.py  sources_uses.py  sources_uses_detailed.py  taxes.py  tif.py  tif_calculator.py  trace.py  units.py
src/export/: __init__.py  audit_report.py
src/models/: __init__.py  incentives.py  lookups.py  project.py  scenario_config.py
tests/: __init__.py  conftest.py  test_monte_carlo.py
tests/fixtures/: __init__.py  test_inputs.py
tests/test_calculations/: __init__.py  test_costs.py  test_dcf.py  test_debt.py  test_trace.py
ui/: __init__.py  app.py
ui/components/: __init__.py  calculation_trace_view.py  charts.py  dependency_graph_view.py  detailed_cashflow_view.py  inputs.py  results.py  scenario_config_view.py  sources_uses_detailed_view.py  spreadsheet_debug_view.py  tif_analysis_view.py  unit_mix.py
